--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -85,8 +85,10 @@
               <div class="ln_solid"></div>
               <div class="form-group">
                 <div class="col-md-6 col-md-offset-3">
+                  <button id="send"  type="submit" class="btn btn-success" [disabled]="loading">Submit
+                        <img src="../../../assets/ajax/loader.gif" *ngIf="loading" />
 
-                  <button id="send" type="submit" class="btn btn-success">Submit</button>
+                  </button>
                 </div>
               </div>
             </form>
