working on create customer

--- a/src/app/organisations/create-org/create-org.component.html
+++ b/src/app/organisations/create-org/create-org.component.html
@@ -1,3 +1,4 @@
-<p>
-  create-org works!
-</p>
+<form [formGroup] = "ExistingUser">
+    <input type="text" formControlName= "extEmail">
+    <button (click) ="onAddPackage()" type="submit" >Click here</button>
+</form>
