--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 
 //   height: 100%;
 // }
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "./assets/vendors/bootstrap/dist/css/bootstrap.min.css";
 @import "./assets/vendors/font-awesome/css/font-awesome.min.css";
 @import "./assets/vendors/nprogress/nprogress.css";
