--- a/src/app/Packages/set-package-role/set-package-role.component.html
+++ b/src/app/Packages/set-package-role/set-package-role.component.html
@@ -17,54 +17,50 @@
           </div>
           <div class="x_content">
 
-            <form class="form-horizontal form-label-left" >
+            <form [formGroup]="formGroup" >
 
               <p>Assign or Remove Package a role ,
               </p>
 
 
 
-              <div class="item form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" > Select Package <span class="required">*</span>
-                </label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-
-                  <select class="form-control" required>
-
-                  </select>
-                </div>
-              </div>
-              <div class="item form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12">Select Role<span class="required">*</span>
-                </label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-
-                  <select class="form-control" required>
-
-                  </select>
-                </div>
-              </div>
-
-              <div class="item form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="gender"> <span class="required">  </span>
-                </label>
-
-                <button type="submit" class="btn btn-success btn-xs">Add To Role</button>
-                <button type="submit" class="btn btn-success btn-xs">Remove From Role</button>
-
-                <div class="">
-                  <p>Roles Found</p>
-                </div>
-              </div>
-              </form>
-
-              <div class="ln_solid"></div>
               <div class="form-group">
-                <div class="col-md-6 col-md-offset-3">
-                  <button type="submit" class="btn btn-primary">Cancel</button>
-                  <button id="send" type="submit" class="btn btn-success">Create</button>
-                </div>
+                <label class="control-label" > Select Package <span class="required">* <img src="../../../assets/ajax/loader.gif" width="20" height="20" *ngIf="loading"> </span>
+                </label>
+
+                <select class="form-control" id ="selectPackage" formControlName="PackageId" required>
+                  <option *ngFor="let package of packages"  value="{{package.id}}">{{package.name}}</option>
+                </select>
+
               </div>
+              <div class="form-group">
+                <label class="control-label">Select Role<span class="required">* <img src="../../../assets/ajax/loader.gif"  width="20" height="20" *ngIf="loading"></span>
+                </label>
+
+                  <select class="form-control" formControlName="PackageRoleId"  required>
+                    <option *ngFor="let role of packageRole"  value="{{role.id}}">{{role.name}}</option>
+
+                  </select>
+
+              </div>
+
+              <div class="form-group">
+
+
+                <button type="submit" class="btn btn-success" [disabled]="onProgress" (click) ="addToRole()" > Add To Role <img src="../../../assets/ajax/loader.gif"  width="20" height="20" *ngIf="onProgress"></button>
+                <button type="submit" class="btn btn-danger" [disabled]="onProgress" (click) ="removeFromRole()">Remove From Role <img src="../../../assets/ajax/loader.gif"  width="20" height="20" *ngIf="onProgress"></button>
+
+
+              </div>
+              <div class="well" *ngIf="pRoles">
+                  <p>Roles </p>
+                   <span class="badge tag-span" *ngFor="let role of pRoles">
+                     {{role}}
+                   </span>
+              </div>
+         </form>
+
+
 
           </div>
         </div>
