--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,3 +1,41 @@
-<p>
-  login works!
-</p>
+<img class="img-fluid float-right" width="30" height="30"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
+<section class="login_content">
+
+</section>
+
+<div class="well">
+
+    <form [formGroup]="myForm">
+        <h1>Login Form</h1>
+        <div class="form-group">
+            <label >Email</label>
+          <label  class="text-right text-danger" *ngIf="email.invalid && (email.touched || email.dirty)">Email is invalid</label>
+        <input type="email" formControlName="Email" class="form-control" >
+        </div>
+        <div class="form-group">
+          <label >Password</label>
+          <label  class="text-right text-danger" *ngIf="password.invalid && (password.touched || password.dirty)">Password is invalid</label>
+        <input type="password" formControlName="Password" class="form-control" >
+      </div>
+
+      <div>
+          <button class="btn btn-primary" (click)="onSubmit()">Login</button>
+
+      </div>
+
+      <div class="clearfix"></div>
+
+      <div class="separator">
+        <p class="change_link">New to site?
+
+
+        <div class="clearfix"></div>
+        <br />
+
+        <div>
+          <h1><i class="fa fa-paw"></i> Capital X</h1>
+          <p>©2016 All Rights Reserved. Captial X! Privacy and Terms</p>
+        </div>
+      </div>
+      </form>
+</div>
