--- a/src/app/Layouts/login-layout/login-layout.component.html
+++ b/src/app/Layouts/login-layout/login-layout.component.html
@@ -14,6 +14,7 @@
 
       <div class="login_wrapper">
         <div class="animate form login_form">
+          <h1>Loging working</h1>
           <router-outlet></router-outlet>
 
         </div>
