completed layout , arranging

--- a/src/app/reviews/create-review/create-review.component.html
+++ b/src/app/reviews/create-review/create-review.component.html
@@ -101,69 +101,7 @@
                 <div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
 
                   <!-- start recent activity -->
-                  <ul class="messages">
-                    <li>
-                      <img src="images/img.jpg" class="avatar" alt="Avatar">
-                      <div class="message_date">
-                        <h3 class="date text-info">24</h3>
-                        <p class="month">May</p>
-                      </div>
-                      <div class="message_wrapper">
-                        <h4 class="heading">CST</h4>
-                        <blockquote class="message">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth.</blockquote>
-                        <br />
-                        <p>
-                          <span class="fs1 text-info" aria-hidden="true" data-icon=""></span><i class="fa fa-clock-o" style="color: red;"></i><span style="color: red;"> 5:30pm</span>
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <img src="images/img.jpg" class="avatar" alt="Avatar">
-                      <div class="message_date">
-                        <h3 class="date text-error">21</h3>
-                        <p class="month">May</p>
-                      </div>
-                      <div class="message_wrapper">
-                        <h4 class="heading">COT</h4>
-                        <blockquote class="message">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth.</blockquote>
-                        <br />
-                        <p>
-                          <span class="fs1 text-info" aria-hidden="true" data-icon=""></span><i class="fa fa-clock-o" style="color: red;"></i><span style="color: red;"> 5:30pm</span>
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <img src="images/img.jpg" class="avatar" alt="Avatar">
-                      <div class="message_date">
-                        <h3 class="date text-info">24</h3>
-                        <p class="month">May</p>
-                      </div>
-                      <div class="message_wrapper">
-                        <h4 class="heading">CST</h4>
-                        <blockquote class="message">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth.</blockquote>
-                        <br />
-                        <p>
-                          <span class="fs1 text-info" aria-hidden="true" data-icon=""></span><i class="fa fa-clock-o" style="color: red;"></i><span style="color: red;"> 5:30pm</span>
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <img src="images/img.jpg" class="avatar" alt="Avatar">
-                      <div class="message_date">
-                        <h3 class="date text-error">21</h3>
-                        <p class="month">May</p>
-                      </div>
-                      <div class="message_wrapper">
-                        <h4 class="heading">CST</h4>
-                        <blockquote class="message">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth.</blockquote>
-                        <br />
-                        <p>
-                          <span class="fs1 text-info" aria-hidden="true" data-icon=""></span><i class="fa fa-clock-o" style="color: red;"></i><span style="color: red;"> 5:30pm</span>
-                        </p>
-                      </div>
-                    </li>
-
-                  </ul>
+                 <app-customer-review-list [customerId] = "customerId"></app-customer-review-list>
                   <!-- end recent activity -->
 
             <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
