--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,11 +1,9 @@
-<img class="img-fluid float-right" width="30" height="30"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
 <section class="login_content">
+  <img class="img-fluid float-right" width="30" height="30"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
 
-</section>
+  <div class="well center-div">
 
-<div class="well">
-
-    <form  [formGroup]="myForm">
+    <form  [formGroup]="myForm1">
         <h1>Login Form</h1>
         <div class="form-group">
             <label >Email</label>
@@ -39,3 +37,5 @@
       </div>
       </form>
 </div>
+
+</section>
