--- a/src/app/Layouts/master-layout/master-layout.component.html
+++ b/src/app/Layouts/master-layout/master-layout.component.html
@@ -29,7 +29,7 @@
               <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                  <li><a routerLink="/master/user/create" ><i class="fa fa-users"></i>Clients / Organisations </a>
+                  <li><a routerLink="/master/organisation/list" ><i class="fa fa-users"></i>Clients / Organisations </a>
 
                   <li><a href="#"><i class="fa fa-reply"></i>Reminder<span class="badge bg-red">6</span></a>
                   </li>
@@ -51,10 +51,15 @@
                 <h3>Advance</h3>
                 <ul class="nav side-menu">
 
-                      <li><a  routerLink="/master/user/create" ><i class="fa fa-suitcase"></i>Create Client/ Organisation</a></li>
-                      <li><a  routerLink="/master/team/create" ><i class="fa fa-users"></i>Create Team</a></li>
-                      <li><a  routerLink="/master/customer/create" ><i class="fa fa-file"></i>Create Basket</a></li>
+                      <li><a  routerLink="/master/organisation/create" ><i class="fa fa-suitcase"></i>Create Client/ Organisation</a></li>
+                      <li><a  routerLink="/master/user/create" ><i class="fa fa-suitcase"></i>Create User </a></li>
+                      <li><a  routerLink="/master/user/addRoles" ><i class="fa fa-suitcase"></i>Assign User to role </a></li>
 
+
+                      <li><a  routerLink="/master/team/create" ><i class="fa fa-users"></i>Create Team</a></li>
+                      <li><a  routerLink="/master/team-member/create" ><i class="fa fa-plus"></i>Add user to team</a></li>
+
+                      <li><a  routerLink="/master/customer/create" ><i class="fa fa-file"></i>Create Basket</a></li>
                   <li><a href="#"><i class="fa fa-archive"></i>Assign</a>
                   </li>
                   <li><a href="#"><i class="fa fa-money"></i>Billing</a>
