--- a/src/app/Layouts/assigned/assigned.component.html
+++ b/src/app/Layouts/assigned/assigned.component.html
@@ -29,61 +29,15 @@
                 <div class="menu_section">
                   <h3>General</h3>
                   <ul class="nav side-menu">
-                    <li><a><i class="fa fa-suitcase"></i>Client<span class="fa fa-chevron-down"> </span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="mprojects.html"><i class="fa fa-folder-o"></i>CMFB</a></li>
-                        <li><a href="mprojects.html"><i class="fa fa-folder-o"></i>DBK</a></li>
-                        <li><a href="mprojects.html"><i class="fa fa-folder-o"></i>NGP</a></li>
-                      </ul>
+                    <li><a router='/Assigned' ><i class="fa fa-file"></i>Baskets</a> </li>
+                    <li><a router='Assigned/reminders'><i class="fa fa-reply"></i>Reminder<span class="badge bg-red">10</span></a> </li>
+                    <li> <a router='/Assigned/payments/'><i class="fa fa-usd"></i>Due Payment <span class="badge bg-orange">1</span></a>  </li>
+                    <li> <a router='/Assigned/Reschedule/'><i class="fa fa-recycle"></i>Reschedule <span class="badge bg-orange">1</span></a>  </li>
+                    <li> <a router='/Assigned'><i class="fa fa-arrow-circle-up"></i>Updates <span class="badge bg-orange">1</span></a>  </li>
 
-                    </li>
-                    <li><a href="mrmd.html"><i class="fa fa-reply"></i>Reminder<span class="badge bg-red">6</span></a>
-                    </li>
-                    <li><a href="mdpt.html"><i class="fa fa-usd"></i>Due Payment<span class="badge bg-red">9</span></a>
-                    </li>
-                    <li><a href="mqueries.html"><i class="fa fa-exclamation"></i>Queries<span class="badge bg-red">10</span></a>
-                    </li>
-                    <li><a href="mupdate.html"><i class="fa fa-arrow-circle-up"></i>Updates<span class="badge bg-orange">1</span></a>
-                    </li>
-                    <li><a><i class="fa fa-users"></i>Team<span class="fa fa-chevron-down"> </span></a>
-                     <ul class="nav child_menu">
-                        <li><a href="mteams.html"><i class="fa fa-user"></i>Team 1</a></li>
-                        <li><a><i class="fa fa-user"></i>Team 2</a></li>
-                        <li><a><i class="fa fa-user"></i>Team 3</a></li>
-                      </ul>
-                    </li>
-
-                    <li><a><i class="fa fa-recycle"></i>Reschedule<span class="fa fa-chevron-down"></span></a>
-                      <ul class="nav child_menu">
-                        <li><a href="mrsd.html">Basket 1</a></li>
-                        <li><a href="mrsd.html">Basket 2</a></li>
-                        <li><a href="mrsd.html">Basket 3</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="minbox.html"><i class="fa fa-envelope-o"></i>Mail<span class="badge bg-green">6</span></a>
-                    </li>
 
                   </ul>
                 </div>
-                <div class="menu_section">
-                  <h3>Advance</h3>
-                  <ul class="nav side-menu">
-
-                    <li><a><i class="fa fa-plus-circle"></i>Create<span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="createclient.html"><i class="fa fa-suitcase"></i>Client</a></li>
-                        <li><a href="createteam.html"><i class="fa fa-users"></i>Team</a></li>
-                        <li><a href="createbasket.html"><i class="fa fa-file"></i>Basket</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="assign.html"><i class="fa fa-archive"></i>Assign</a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-money"></i>Billing</a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-trash"></i>Trash</a>
-                    </li>
-                    </ul>
-                    </div>
 
               </div>
               <!-- /sidebar menu -->
@@ -115,7 +69,7 @@
                   <a id="menu_toggle"><i class="fa fa-bars"></i></a>
                 </div>
 
-                <ul class="nav navbar-nav navbar-right">
+                <!-- <ul class="nav navbar-nav navbar-right">
                   <li >
                     <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                       <img src="images/img.jpg" alt="">John Doe
@@ -262,7 +216,7 @@
                         </div>
                 </ul>
                 </li>
-                </ul>
+                </ul> -->
               </nav>
             </div>
           </div>
@@ -275,5 +229,3 @@
         </div>
       </div>
           <!-- page content -->
-
-
