--- a/src/app/Layouts/supervisor/supervisor.component.html
+++ b/src/app/Layouts/supervisor/supervisor.component.html
@@ -29,20 +29,21 @@
                 <div class="menu_section">
                   <h3>General</h3>
                   <ul class="nav side-menu">
-                    <li><a href="#" ><i class="fa fa-users"></i>Teams </a> </li>
+                    <li><a href="#" ><i class="fa fa-file"></i>Portfolio</a> </li>
 
-
-                    <li><a href="#"><i class="fa fa-exclamation"></i>Queries<span class="badge bg-red">10</span></a> </li>
-                    <li> <a href="#"><i class="fa fa-arrow-circle-up"></i>Feed backs<span class="badge bg-orange">1</span></a>  </li>
-
+                    <li> <a routerLink="/supervisior/reminders/"><i class="fa fa-reply"></i>Reminder<span class="badge bg-red">10</span></a> </li>
+                    <li> <a routerLink="/supervisior/payments/"><i class="fa fa-usd"></i>Due Payment <span class="badge bg-orange">1</span></a>  </li>
+                    <li> <a routerLink="/supervisior/Reschedule/"><i class="fa fa-recycle"></i>Reschedule <span class="badge bg-orange">1</span></a>  </li>
+                    <li> <a routerLink="#"><i class="fa fa-arrow-circle-up"></i>Updates <span class="badge bg-orange">1</span></a>  </li>
+                    <li><a routerLink="#"><i class="fa fa-users"></i>Team<span class="badge bg-red"></span></a> </li>
+                    <li><a routerLink="/supervisior/customer/create"><i class="fa fa-plus-circle"></i>Create Basket <span class="badge bg-red"></span></a> </li>
+                    <li><a routerLink="/supervisior/AssignBasket"><i class="fa fa-train"></i>Assign team-member <span class="badge bg-red"></span></a> </li>
 
                   </ul>
                 </div>
 
-
               </div>
               <!-- /sidebar menu -->
-
               <!-- /menu footer buttons -->
               <div class="sidebar-footer hidden-small">
 
