--- a/src/app/reviews/create-review/create-review.component.html
+++ b/src/app/reviews/create-review/create-review.component.html
@@ -72,7 +72,6 @@
               </li>
             </ul>
             <a class="btn btn-success"><i class="fa fa-phone m-right-xs"></i> Call</a>
-
             <a class="btn btn-primary view" data-toggle="modal" data-target=".bs-example-modal-lg"><i class="fa fa-edit m-right-xs"></i> Update</a>
             </div>
             <!-- end of profile information -->
@@ -119,40 +118,43 @@
                     <div class="form-group">
                         <label class="control-label ">Select Date</label>
 
-                        <input type="text"  id="pick_date" class="form-control" value="01/01/2016 - 01/25/2016">
-                        <input type="hidden" formControlName="StartDate" id="start_date" class="form-control" >
-                        <input type="hidden" formControlName="EndDate" id="end_date" class="form-control">
+                       <!-- // <input type="date"   class="form-control" > -->
+                        <input type="date" formControlName="StartDate" id="start_date" class="form-control" >
+                        <!-- //<input type="hidden" formControlName="EndDate" id="end_date" class="form-control"> -->
 
                       </div>
 
                   <label for="heard">Action *:</label>
                   <label  class="text-right text-danger" *ngIf="reviewKindId.invalid && (reviewKindId.touched || reviewKindId.dirty)">Choose Action</label>
 
-                  <select id="heard" class="form-control" formControlName="ReviewKindId" required>
+                  <select id="reviewKindSelect"  class="form-control" formControlName="ReviewKindId" required>
 
                     <option value="{{i.id}}" *ngFor="let i of reviewKinds">{{i.name}}</option>
 
                   </select>
-                  <div class="form-group">
+
+                  <div class="form-group hide-div" id="reviewActionView"  >
                   <label  class="text-right text-danger" *ngIf="reviewActionId.invalid && (reviewActionId.touched || reviewActionId.dirty)">Choose Action</label>
+                    <div class="form-group">
+                      <div class="radio">
 
-                  <div class="radio">
+                        <label *ngFor="let i of reviewActions">
+                          <input type="radio" class="flat" value="{{i.id}}" formControlName="ReviewActionId" name="ReviewActionId"><span text-type="block"> {{i.name}}</span>
+                        </label>
 
-                    <label *ngFor="let i of reviewActions">
-                      <input type="radio" class="flat" value="{{i.id}}" formControlName="ReviewActionId" name="ReviewActionId"><span text-type="block"> {{i.name}}</span>
-                    </label>
-
-                  </div>
-
-                  <label for="message">Comment (20 chars min, 100 max) :</label>
-                  <label  class="text-right text-danger" *ngIf="comment.invalid && (comment.touched || comment.dirty)">Enter Comment</label>
-
-                  <textarea id="message" formControlName="Comment" class="form-control" name="message" data-parsley-trigger="keyup" data-parsley-minlength="20" data-parsley-maxlength="100" data-parsley-minlength-message="Come on! You need to enter at least a 20 caracters long comment.."
-                    data-parsley-validation-threshold="10"></textarea>
+                      </div>
+                    </div>
 
 
             </div>
+            <div class="form-group">
 
+                <label for="message">Comment </label>
+                <label  class="text-right text-danger" *ngIf="comment.invalid && (comment.touched || comment.dirty)">Enter Comment</label>
+
+                <textarea id="message" formControlName="Comment" class="form-control" name="message" data-parsley-trigger="keyup" data-parsley-minlength="20" data-parsley-maxlength="100" data-parsley-minlength-message="Come on! You need to enter at least a 20 caracters long comment.."
+                  data-parsley-validation-threshold="10"></textarea>
+              </div>
 
                 </div>
 
