--- a/src/app/teams/team-memeber/create-team-member/create-team-member.component.html
+++ b/src/app/teams/team-memeber/create-team-member/create-team-member.component.html
@@ -27,17 +27,23 @@
                   <div class="input-group">
                     <input type="text" formControlName="Email" class="form-control">
                     <span class="input-group-btn">
-                                      <button type="button" (click)="CheckEmail()" class="btn btn-primary">Search!</button>
-                                  </span>
+                       <button type="button" (click)="CheckEmail()" class="btn btn-primary">Search!</button>
+                    </span>
                   </div>
+                  <div class="form-group" *ngIf="showOrganisation" >
+                    <label >Select Organisation *:</label>
+                    <select  formControlName="OrganisationId" class="form-control" >
+                      <option value="{{i.id}}" *ngFor="let i of organisations">{{i.name}}</option>
+                    </select>
+                  </div>
+                  <label >Select Team *:</label>
+                  <select formControlName="TeamId" class="form-control" >
+                    <option value="{{i.id}}" *ngFor="let i of teams">{{i.name}}</option>
+                  </select>
+
               <label >Select Project *:</label>
                 <select  formControlName="ProjectId" class="form-control" >
                   <option value="{{i.id}}" *ngFor="let i of projects">{{i.name}}</option>
-                </select>
-
-                <label >Select Team *:</label>
-                <select formControlName="TeamId" class="form-control" >
-                  <option value="{{i.id}}" *ngFor="let i of teams">{{i.name}}</option>
                 </select>
 
               <label >Description * :</label>
