--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -79,7 +79,19 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <input class="form-control col-md-7 col-xs-12" [formControl] ="phoneNumber" placeholder="PhoneNumber" required="required" type="number">
                 </div>
+
               </div>
+              <div class="item form-group">
+                  <label class="control-label col-md-3 col-sm-3 col-xs-12" >Select Organisation<span ></span>
+                  </label>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <select class="form-control col-md-7 col-xs-12"  [formControl] ="orgId"  >
+                      <option *ngFor="let i of orgainsations" value="{{i.id}}"  >{{i.name}}</option>
+                    </select>
+                    <input class="form-control col-md-7 col-xs-12" [formControl] ="phoneNumber" placeholder="PhoneNumber" required="required" type="number">
+                  </div>
+
+                </div>
 
 
 
@@ -88,7 +100,6 @@
                 <div class="col-md-6 col-md-offset-3">
                   <button id="send"  type="submit" class="btn btn-success" [disabled]="loading">Submit
                         <img src="../../../assets/ajax/loader.gif" *ngIf="loading" />
-
                   </button>
                 </div>
               </div>
